--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>我的學號:1110211070</h1>
     <p>關於我 我是黃聖明今年21歲就讀文藻外語大學四年級數位系。</p>
-    <img src=".1.JPG" alt="">
+    <img src="./1.JPG" alt="">
 </body>
 </html>
